--- a/css/common.css
+++ b/css/common.css
@@ -68,7 +68,7 @@ a { color: inherit; }
 .slick-dots button { display: block; width: 6px; height: 6px; background: #fff; box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25); cursor: pointer; text-indent: -119988px; overflow: hidden; text-align: left; text-transform: capitalize; border-radius: 50%; }
 .slick-dots button:hover { box-shadow: none; }
 
-.icon-main-sprite, .icon-main-animal, .icon-main-business, .icon-main-child, .icon-main-electro, .icon-main-help, .icon-main-hobby, .icon-main-house, .icon-main-present, .icon-main-state, .icon-main-style, .icon-main-trade, .icon-main-transport, .icon-main-work {position: absolute; left: 6px; bottom:23px;  background-image: url('../img/icons-sprites/icon-main.png'); background-repeat: no-repeat; }
+.icon-main-sprite, .icon-main-animal, .icon-main-business, .icon-main-child, .icon-main-electro, .icon-main-help, .icon-main-hobby, .icon-main-house, .icon-main-present, .icon-main-state, .icon-main-style, .icon-main-trade, .icon-main-transport, .icon-main-work {position: absolute; left: 6px; bottom:4px;  background-image: url('../img/icons-sprites/icon-main.png'); background-repeat: no-repeat; }
 
 /* */
 .icon-social-sprite, .icon-social-class, .icon-social-fb, .icon-social-gplus, .icon-social-twitter, .icon-social-vk { background-image: url('../img/icons-sprites/icon-social.png'); background-repeat: no-repeat; }
@@ -283,7 +283,7 @@ body { min-width: 1020px;}
 
 .header { font-size: 20px; }
 .header .container { position: relative; padding-top: 30px; padding-bottom: 0; background-color: #fff; -webkit-transition: all 0.3s; transition: all 0.3s; }
-.header-top { position: relative; *zoom: 1; }
+.header-top { position: relative; *zoom: 1; max-width: 1086px;}
 .header-top:after { content: ""; display: table; clear: both; }
 .header-top .logo { float: left; margin-left: 0; height: 64px; -webkit-transition: all 0.3s; transition: all 0.3s; }
 .header-top .logo img { height: 100%; vertical-align: bottom; }
@@ -341,15 +341,15 @@ body { min-width: 1020px;}
 .ui-autocomplete li + li { border-top: 1px solid #e0d9ee; }
 .ui-autocomplete + .ui-helper-hidden-accessible { display: none; }
 
-.form-search { margin-top: 10px; padding: 20px; background-color: #675096; -webkit-transition: all 0.3s; transition: all 0.3s; *zoom: 1; padding-bottom: 5px; }
+.form-search { margin-top: 10px; padding: 20px; background-color: #675096; -webkit-transition: all 0.3s; transition: all 0.3s; *zoom: 1; padding-bottom: 5px; max-width: 1086px;}
 .form-search:after { content: ""; display: table; clear: both; }
 .form-search .field { float: left; width: 268px; }
 .form-search .field  .form-search .field { width: 100%; height: 35px; line-height: 35px; }
 .form-search .field  { padding: 0 10px; font-size: 16px; color: #583d8b; }
 .form-search .field:-moz-placeholder, .form-search .field input::-moz-placeholder { color: #583d8b; opacity: 1; }
 .form-search .field::-webkit-input-placeholder { color: #583d8b; }
-.form-search .field:focus { box-shadow: inset 0 0 0 2px #d4762d; }
-.form-search .field  { font-size: 16px; color: #583d8b; text-transform: uppercase; text-align: left; text-indent: 38px; border-radius: 0; background-color:white; background-image: url("../img/icon-zoom.png"); background-position: 10px center; background-repeat: no-repeat; -webkit-transition: all 0.2s; transition: all 0.2s; }
+.form-search .field:focus { border:2px solid #d4762d; }
+.form-search .field  { font-size: 16px; color: #583d8b; text-transform: uppercase; text-align: left; text-indent: 8px; border-radius: 0; background-color:white; background-image: url("../img/icon-zoom.png"); background-position: 10px center; background-repeat: no-repeat; -webkit-transition: all 0.2s; transition: all 0.2s; }
 .form-search .field:hover { background-color: white; -webkit-transition: all 0.2s; transition: all 0.2s; }
 .form-search .location { position: relative; }
 .form-search .location  { cursor: text; }
@@ -357,7 +357,7 @@ body { min-width: 1020px;}
 .form-search .location::-ms-clear { display: none; }
 .form-search .search { position: relative; width: 522px; margin-left: 20px; -webkit-transition: all 0.3s; transition: all 0.3s; }
 .form-search .search::-ms-clear { display: none; }
-.form-search .search .clear-input { position: absolute; z-index: 6; display: none; right: 0; top: 0; margin-right: 10px; margin-top: 12px; }
+.form-search .search .clear-input { position: absolute; z-index: 6; display: none; right: 0; top: 0; margin-right: 60px; margin-top: 12px; }
 .form-search .submit { float: right; width: 110px; -webkit-transition: all 0.3s; transition: all 0.3s; font-size: 16px;
     color: #fff;
     text-transform: uppercase;
@@ -369,17 +369,18 @@ body { min-width: 1020px;}
     background-repeat: no-repeat;
     -webkit-transition: all 0.2s;
     transition: all 0.2s;height: 35px;border:none; font-weight: normal;   font-family: Arial;}
-.form-search .submit:hover{    background-color: #d4762d;
+.form-search .submit:hover,.form-search .submit:active,.form-search .submit:focus{    background-color: #d4762d;
     -webkit-transition: all 0.2s;
     transition: all 0.2s; color:white;
     background-image: url("../img/icon-zoom.png"); background-position: 10px;}
-.clear-input { position: absolute; display: none; right: 0; top: 0; margin-right: 10px; margin-top: 12px; }
+    .header-top .lang-selector li a{    color: #583d8b;}
+.clear-input { position: absolute; display: none; right: 0; top: 0; margin-right: 60px; margin-top: 12px; }
 
 .search-city-wrap { position: relative; margin-bottom: 15px; width: 268px; }
 .search-city-wrap input { width: 100%; height: 25px; padding: 0 10px; font-size: 16px; color: #583d8b; line-height: 25px; vertical-align: top; background: #E9E6F1; border:1px solid #583d8b;}
 .search-city-wrap .clear-input { margin-top: 8px; margin-right: 8px; }
 
-.location-wrap {position: relative; display: none; min-height: 220px; margin-top: -1px; padding-left: 20px; padding-right: 20px; padding-bottom: 20px; background-color: white;border: 1px solid #583d8b; }
+.location-wrap {max-width:1086px;position: relative; display: none; min-height: 220px; margin-top: -1px; padding-left: 20px; padding-right: 20px; padding-bottom: 20px; background-color: white;border: 1px solid #583d8b; }
 
 .location-title { margin-bottom: 10px; padding-bottom: 3px; font-size: 16px; color: #fff; border-bottom:1px solid #583d8b; *zoom: 1; }
 .location-title:after { content: ""; display: table; clear: both; }
@@ -400,7 +401,7 @@ body { min-width: 1020px;}
 
 .city-wrap { display: none; }
 .exit-location-wrap{ cursor: pointer;}
-.section-main { position: relative; *zoom: 1; }
+.section-main { position: relative; *zoom: 1;}
 .section-main:after { content: ""; display: table; clear: both; }
 .section-main-in { position: relative; float: left; width: 67%; background-color: #fff; *zoom: 1; }
 .section-main-in:after { content: ""; display: table; clear: both; }
@@ -424,7 +425,7 @@ body { min-width: 1020px;}
 
 .post-title { padding-left: 10px; font-size: 20px; color: #fff; line-height: 35px; text-transform: uppercase; font-weight: normal; background-color: #d4762e; }
 .post-title a{color: #fff;}
-.post-title a:hover { border-bottom: 2px solid #fff; text-decoration: none; color: white;}
+.post-title a:hover { border-bottom: 2px solid #fff; text-decoration: none; color: white; }
 .post-title span { text-transform: none; }
 
 .icon-all-star { display: block; float: right; margin-top: 3px; cursor: pointer; }
@@ -475,7 +476,7 @@ body { min-width: 1020px;}
 .nav-main { float: left; width: 308px; font-size: 18px; *zoom: 1; }
 .nav-main:after { content: ""; display: table; clear: both; }
 .nav-main > li { padding-right: 6px; margin-bottom: 5px; }
-.nav-main > li > span, .nav-main > li > a { color:#482c81; position: relative; z-index: 6; overflow: hidden; display: block; padding-left: 10px; height: 50px; line-height: 50px; background-color: #fff; cursor: pointer; }
+.nav-main > li > span, .nav-main > li > a { color:#482c81; position: relative; z-index: 8; overflow: hidden; display: block; padding-left: 10px; height: 50px; line-height: 50px; background-color: #fff; cursor: pointer; }
 .nav-main > li > span .icon-wrap, .nav-main > li > a .icon-wrap { display: inline-block; width: 60px; text-align: center; }
 .nav-main > li > span .icon-wrap i, .nav-main > li > a .icon-wrap i { display: inline-block; vertical-align: middle; }
 .nav-main > li.is-active, .nav-main > li:hover { padding-right: 0; box-shadow: 0 0 6px rgba(1, 1, 1, 0.3); }
@@ -489,6 +490,7 @@ body { min-width: 1020px;}
 .nav-main-sub > ul > li a { overflow: hidden; display: block; height: 50px; line-height: 50px; color: #d3772e;}
 .nav-main-sub > ul > li a > span { display: inline-block; width: 75px; text-align: center; }
 .nav-main-sub > ul > li a > span i { display: inline-block; vertical-align: middle; }
+.nav-main-sub > ul > li a:hover{text-decoration: none;}
 .nav-main-sub .post-title { *zoom: 1; }
 .nav-main-sub .post-title:after { content: ""; display: table; clear: both; }
 .nav-main-sub .post-title .nav-close-btn { float: right; margin-right: 10px; font-size: 14px; letter-spacing: 0.02em; cursor: pointer; position: relative; padding-right: 20px; }
@@ -506,16 +508,16 @@ body { min-width: 1020px;}
 
 .section-top { margin-top: 30px; -webkit-transition: all 0.3s; transition: all 0.3s; *zoom: 1; }
 .section-top:after { content: ""; display: table; clear: both; }
-
+.top-post{max-width: 1075px;}
 .top-post-btn { float: right; margin-top: 10px; margin-bottom: -10px; height: 60px; font-size: 20px; 
 	color:#583d8b;vertical-align: top; -webkit-transition: all 0.2s; transition: all 0.2s; *zoom: 1; font-family: 'segoe-script';}
 .top-post-btn:after { content: ""; display: table; clear: both; }
 .top-post-btn:hover { color: #d4762d; -webkit-transition: all 0.2s; transition: all 0.2s; text-decoration: none;}
 .top-post-btn .icon-all-arrow-left { float: left; margin-top: 10px; margin-right: 5px; }
 
-.section-new { margin-top: 40px; *zoom: 1; }
+.section-new { margin-top: 40px; *zoom: 1; max-width: 1086px;}
 .section-new:after { content: ""; display: table; clear: both; }
-.section-new-left { float: left; width: 584px; }
+.section-new-left { float: left; width: 584px;padding-left: 0 !important; }
 .section-new-right { float: right; width: 360px; }
 
 .banner { margin-top: 20px; }
@@ -526,23 +528,25 @@ body { min-width: 1020px;}
 .news-list li { margin-top: 13px; padding: 7px 7px 5px 7px; box-shadow: 0 0 6px rgba(1, 1, 1, 0.3); *zoom: 1; }
 .news-list li:after { content: ""; display: table; clear: both; }
 .news-list li:hover { box-shadow: 0 0 5px 1px #d4762d; }
-.news-list-img { float: left; margin-right: 7px; padding-right: 7px; width: 58px; height: 58px; line-height: 58px; text-align: center; vertical-align: middle; border-right: 1px solid rgba(88, 61, 139, 0.5); box-sizing: content-box; }
+.news-list-img { float: left; margin-right: 7px; padding-right: 7px; width: 58px; height: 64px; line-height: 60px; text-align: center; vertical-align: middle; border-right: 1px solid rgba(88, 61, 139, 0.5); box-sizing: content-box; }
 .news-list-img img { max-width: 58px; max-height: 58px; vertical-align: middle; }
 .news-list-in .news-title { font-size: 18px; color: #d4762d; -webkit-transition: all 0.2s; transition: all 0.2s; }
-.news-list-in .news-title:hover { text-shadow: 0 0 0.5px #d4762d; -webkit-transition: all 0.2s; transition: all 0.2s; }
+.news-list-in .news-title:hover { text-shadow: 0 0 0.5px #d4762d; -webkit-transition: all 0.2s; transition: all 0.2s; text-decoration: none;}
 .news-list-in .news-list-info { font-size: 14px; *zoom: 1; }
 .news-list-in .news-list-info:after { content: ""; display: table; clear: both; }
 .news-list-in .news-list-info .news-date { float: left; -webkit-transition: all 0.2s; transition: all 0.2s; }
 .news-list-in .news-list-info .news-date:hover { text-shadow: 0 0 0.5px #583d8b; -webkit-transition: all 0.2s; transition: all 0.2s; }
 .news-list-in .news-list-info .news-comment { float: right; -webkit-transition: all 0.2s; transition: all 0.2s; }
+.news-list-in .news-list-info .news-date,.news-list-img img,.post-list-img img,.news-list-in .news-list-info .news-comment {color: #583d8b; position: relative; bottom: 2px;}
+.news-list-in .news-list-info .news-date:hover,.news-list-in .news-list-info .news-comment:hover{text-decoration: none;color: #583d8b; }
 .news-list-in .news-list-info .news-comment:hover { text-shadow: 0 0 0.5px #583d8b; -webkit-transition: all 0.2s; transition: all 0.2s; }
 
-.section-post-new { margin-top: 30px; padding: 24px; padding-bottom: 14px; background-color: #f6e4d5; *zoom: 1; }
+.section-post-new { margin-top: 30px; padding: 24px; padding-bottom: 14px; background-color: #f6e4d5; *zoom: 1;     max-width: 1086px;}
 .section-post-new:after { content: ""; display: table; clear: both; }
 .section-post-new p { float: right; font-size: 26px; line-height: 35px; text-transform: uppercase; }
-.section-post-new .icon-all-arrow-right { float: right; margin-top: 12px; margin-left: 20px; margin-right: 20px; }
+.section-post-new .icon-all-arrow-right { float: right; margin-top: 12px; margin-left: 20px; margin-right: 20px;  }
 
-.section-about { margin-top: 20px; padding: 0 20px; background-color: #f1f0f0; *zoom: 1; }
+.section-about { margin-top: 20px; padding: 0 20px; background-color: #f1f0f0; *zoom: 1;   max-width: 1086px;}
 .section-about p,.section-about p a{ color: #583d8b; font-family: Arial, sans-serif; font-size: 18px;
     line-height: 22px;}
 .section-about:after { content: ""; display: table; clear: both; }
@@ -556,7 +560,7 @@ body { min-width: 1020px;}
 
 .social-list { padding-bottom: 20px; }
 .social-list li { display: inline-block; margin-left: 21px; line-height: 30px; background-color: #e0e0e0; -webkit-transition: all 0.2s; transition: all 0.2s; }
-.social-list li a{font-size: 16px;}
+.social-list li a{font-size: 16px; color:#583d8b;}
 .social-list li:hover { background-color: #eec9ac; -webkit-transition: all 0.2s; transition: all 0.2s; }
 .social-list li:hover a{text-decoration: none}
 .social-list li i { float: left; margin-right: 5px; }
@@ -584,6 +588,7 @@ body { min-width: 1020px;}
 .footer-bottom:after { content: ""; display: table; clear: both; }
 .footer-bottom .footer-logo { float: left; margin-right: 15px; padding: 3px 13px; width: 138px; height: 54px; background-color: #fff; }
 .footer-bottom .footer-logo img { width: 112px; height: 48px; }
+.footer-bottom p{margin: 0 0 5px;}
 .footer-bottom p + p { color: #fff; }
 .footer-bottom p a:hover { color: #eabb97; }
 
