--- a/css/common.css
+++ b/css/common.css
@@ -286,7 +286,7 @@ body { min-width: 1020px;}
 
 .header { font-size: 20px; }
 .header .container { position: relative; padding-top: 30px; padding-bottom: 0; background-color: #fff; -webkit-transition: all 0.3s; transition: all 0.3s; max-width:1010px!important;}
-.header-top { position: relative; *zoom: 1; max-width: 980px;}
+.header-top { position: relative; *zoom: 1; max-width: 1010px;}
 .header-top:after { content: ""; display: table; clear: both; }
 .header-top .logo { float: left; margin-left: 0; height: 64px; -webkit-transition: all 0.3s; transition: all 0.3s; }
 .header-top .logo img { height: 100%; vertical-align: bottom; }
@@ -352,13 +352,13 @@ body { min-width: 1020px;}
 .form-search .field:-moz-placeholder, .form-search .field input::-moz-placeholder { color: #583d8b; opacity: 1; }
 .form-search .field::-webkit-input-placeholder { color: #583d8b; }
 .form-search .field:focus { border:2px solid #d4762d; }
-.form-search .field  { font-size: 16px; color: #583d8b; text-transform: uppercase; text-align: left; text-indent: 8px; border-radius: 0; background-color:white; background-image: url("../img/icon-zoom.png"); background-position: 10px center; background-repeat: no-repeat; -webkit-transition: all 0.2s; transition: all 0.2s; }
+.form-search .field  { font-size: 16px; color: #583d8b; text-align: left; text-indent: 8px; border-radius: 0; background-color:white; background-image: url("../img/icon-zoom.png"); background-position: 10px center; background-repeat: no-repeat; -webkit-transition: all 0.2s; transition: all 0.2s; }
 .form-search .field:hover { background-color: white; -webkit-transition: all 0.2s; transition: all 0.2s; }
 .form-search .location { position: relative; }
 .form-search .location  { cursor: text; }
 .form-search .location:focus { box-shadow: none; }
 .form-search .location::-ms-clear { display: none; }
-.form-search .search { position: relative; width: 522px; margin-left: 20px; -webkit-transition: all 0.3s; transition: all 0.3s; }
+.form-search .search { position: relative; width: 435px; margin-left: 20px; -webkit-transition: all 0.3s; transition: all 0.3s; line-height: 23px;}
 .form-search .search::-ms-clear { display: none; }
 .form-search .search .clear-input { position: absolute; z-index: 6; display: none; right: 0; top: 0; margin-right: 60px; margin-top: 12px; }
 .form-search .submit { float: right; width: 110px; -webkit-transition: all 0.3s; transition: all 0.3s; font-size: 16px;
@@ -377,7 +377,7 @@ body { min-width: 1020px;}
     transition: all 0.2s; color:white;
     background-image: url("../img/icon-zoom.png"); background-position: 10px;}
     .header-top .lang-selector li a{    color: #583d8b;}
-.clear-input { position: absolute; display: none; right: 0; top: 0; margin-right: 60px; margin-top: 12px; }
+.clear-input { position: absolute; display: none; right: 0; top: 0; margin-right:25px; margin-top: 12px; }
 
 .search-city-wrap { position: relative; margin-bottom: 15px; width: 268px; }
 .search-city-wrap input { width: 100%; height: 25px; padding: 0 10px; font-size: 16px; color: #583d8b; line-height: 25px; vertical-align: top; background: #E9E6F1; border:1px solid #583d8b;}
@@ -484,7 +484,7 @@ body { min-width: 1020px;}
 .nav-main > li > span .icon-wrap i, .nav-main > li > a .icon-wrap i { display: inline-block; vertical-align: middle; }
 .nav-main > li.is-active, .nav-main > li:hover { padding-right: 0; box-shadow: 0 0 6px rgba(1, 1, 1, 0.3); }
 
-.nav-main-sub { display: none; position: absolute; z-index: 7; left: 308px; right: 0; top: 0; padding:5px 5px 420px 5px; font-size: 16px; background-color: #fff; background-position: center bottom; background-size: 100% auto; background-repeat: no-repeat; box-shadow: 0 0 6px rgba(1, 1, 1, 0.3); *zoom: 1; }
+.nav-main-sub { display: none; position: absolute; z-index: 7; max-width: 657px; left: 308px; right: 0; top: 0; padding:5px 5px 420px 5px; font-size: 16px; background-color: #fff; background-position: center bottom; background-size: 100% auto; background-repeat: no-repeat; box-shadow: 0 0 6px rgba(1, 1, 1, 0.3); *zoom: 1; }
 .nav-main-sub:after { content: ""; display: table; clear: both; }
 .nav-main-sub > ul { padding-top: 10px; *zoom: 1; }
 .nav-main-sub > ul:after { content: ""; display: table; clear: both; }
